@@ -184,7 +184,7 @@ I.
 <br />
 <span class="smcap">Rivoluzione e Misoneismo.</span>
 </h2>
-
+<img src="images/image.jpg" id="testimage" alt="" />
 <p>
 Quella che si suole chiamare Rivoluzione dell'89,
 non fu che una grande rivolta e un grande
